--- a/app.css
+++ b/app.css
@@ -6,13 +6,13 @@
 
 /* V A R I A B L E S */
 
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap'); /* Font Import */
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap"); /* Font Import */
 
 :root {
   /* Font Size */
   --fg-primary: 12vh; /* Time and Greetings */
   --fg-secondary: 3vh; /* Greetings and Weather widger */
-  --fg-date: 8vh; /* Date */
+  --fg-date: 4vh; /* Date */
   --fg-list: 2vh; /* Links List */
   --icon: 3vh; /* Icon Size */
 
@@ -56,7 +56,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
   transition: 0.2s ease-in-out;
 }
 
@@ -127,7 +127,7 @@ body {
   justify-content: center;
 }
 
-.weatherBlock {
+.image-block {
   grid-column: 3 / span 2;
   grid-row: 1 / span 2;
   display: flex;
@@ -136,17 +136,20 @@ body {
   justify-content: center;
 }
 
+.main-image {
+  --s: 10px;
+  /* position: absolute; */
+  height: 40vh;
+  border: calc(2 * var(--s)) solid #0000;
+  outline: 1px solid #000;
+  outline-offset: calc(-1 * var(--s));
+}
+
 .date {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-top: 30px;
-}
-
-.weather {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  /* margin-top: 30px; */
 }
 
 .clock {
@@ -320,6 +323,9 @@ body {
   font-weight: bold;
   text-align: center;
   width: 80%;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
 .listItem:hover {
   background-color: var(--accent);
@@ -339,7 +345,7 @@ body {
     grid-column: 1 / span 4;
   }
 
-  .weatherBlock {
+  .image-block {
     display: none;
   }
 
